# sok-detection

./: Makefile  README.md  Readme.org  detectiontools.py  experiments.py  parse_outputs.ipynb  parse_outputs.md  run_benchmarks.py
binaries/: analyze.sh  config.yml
binaries/AES-bearssl/: aes_big_cbc-GCC9-O2  aes_big_gcm-GCC9-O2  aes_ct_cbc-GCC9-O2  aes_ct_gcm-GCC9-O2  dut_aes_big_cbc-GCC9-O2  dut_aes_big_gcm-GCC9-O2  dut_aes_ct_cbc-GCC9-O2  dut_aes_ct_gcm-GCC9-O2  microwalk_aes_big_cbc-GCC9-O2  microwalk_aes_big_cbc-GCC9-O2.map  microwalk_aes_big_gcm-GCC9-O2  (+5 more)
helper_scripts/: Makefile  generate_rand_bn.c  pem_to_array.py  vulnerable_symbols_binsec.sh  vulnerable_symbols_valgrind.py
lib/: .gitignore  Makefile
pintools/: Makefile  makefile.rules  pintool.cpp  pintool_bignum.cpp
src/: analyze.sh  below_main_errors.supp  common.c  common.h  common.supp  generate_mem_file.sh  generate_valgrind_suppressions.sh  microwalk_wrapper.c  relse1_memory.txt  relse1_script.ini  relse2_script.ini  relse2_script_coredump.ini  target_aes.c  target_bn.c  target_ecdsa.c  target_eddsa.c  target_lcm.c  target_nil.c  target_polychacha.c  target_rsa_oaep.c  target_rsa_pkcs.c
tools/relse2/src/checkct/: README.md  checkct.ml  checkct.mli  checkct_lexer.mll.ext  checkct_lexer.mll.header  checkct_options.ml  checkct_options.mli  checkct_types.ml  checkct_types.mli  checkct_utils.ml  checkct_utils.mli  dune  native_solver.enabled.ml  native_solver.stubs.ml  script_parser.mly
tools/relse2/src/checkct/term/: senv.ml  senv.mli  sexpr.ml  sexpr.mli  smt2_solver.ml  solver_sig.mli
(+1829 files in other folders)
